--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main class="main">
-      <section class="advice"></section>
+      <section class="advice" aria-label="advice"></section>
     </main>
     <template id="template-advice">
       <div class="advice__info">
