remove template html

--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
   </head>
   <body>
     <main class="main">
-      <section class="advice" aria-label="advice"></section>
+      <section class="advice" aria-label="advice">
+        <div class="advice__info">
+          <h1 class="advice__title"></h1>
+          <p class="advice__text"></p>
+        </div>
+        <div class="advice__dice">
+          <img src="./assets/icon-dice.svg" alt="icon-dice" />
+        </div>
+      </section>
     </main>
-    <template id="template-advice">
-      <div class="advice__info">
-        <h1 class="advice__title"></h1>
-        <p class="advice__text"></p>
-      </div>
-      <div class="advice__dice">
-        <img src="./assets/icon-dice.svg" alt="icon-dice" />
-      </div>
-    </template>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
