--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="main">
       <section class="advice" aria-label="advice">
         <div class="advice__info">
-          <h1 class="advice__title"></h1>
+          <h1 class="advice__title">advice #</h1>
           <p class="advice__text"></p>
         </div>
         <div class="advice__dice">
