--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main class="main">
       <section class="advice" aria-label="advice">
         <div class="advice__info">
-          <h1 class="advice__title">advice #</h1>
-          <p class="advice__text"></p>
+          <h1 class="advice__title">advice #62</h1>
+          <p class="advice__text">Giving someone a hug can be mutually rewarding. Try to give at least one hug a day to someone.</p>
         </div>
         <div class="advice__dice">
           <img src="./assets/icon-dice.svg" alt="icon-dice" />
